@@ -26,7 +26,6 @@ public class GoalCompanyService {
     private final GoalRepository goalRepository;
     private final TodoRepository todoRepository;
 
-
     public void createGoalCompany(GoalCompanyRequestDto dto, Long userId ) {
         User user = userRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
 
@@ -109,9 +108,9 @@ public class GoalCompanyService {
         return companies.stream()
             .filter(gc -> {
                 if (gc.getEndDate() == null) return false;
-                long dday = ChronoUnit.DAYS.between(today, gc.getEndDate());
-                return dday >= 0 && dday <= 3;
+                long dDay = ChronoUnit.DAYS.between(today, gc.getEndDate());
+                return dDay >= 0 && dDay <= 3;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 }
